static/style.css
* {
    margin: 0;
}

html {
    height: 100%;
    width: 100%;
    margin: 0;
    padding: 0;
}
        
body {
    margin: 0;
    padding: 0;
    min-height:100vh;
}


path {
    fill: none;
    stroke-linejoin: round;
    stroke-linecap: round;
}
.menu {
    position: absolute;
    z-index: 10;
    left: 37px;
    top: 128px;
}

header {
    height: 94px;
    background-color: rgba(12, 12, 12, 0.904);
}

#logo p {
    position: absolute;
    z-index: 10;
    left: 30px;
    font-size: 20px;
    font-family: 'Share Tech', sans-serif;
    top: 35px;
    left: 100px;
    color: white;
    letter-spacing: 4px;
}

#logo img {
    position: absolute;
    height: 55px;
    width: 80px;
    z-index: 10;
    top: 20px;
    left: 19px;
}

#undo {
    border-radius: 20px;
    height: 40px;
    width: 40px;
}

#undo img {
    height: 20px;
    width: 20px;
}

.colors {
    position: flex;
    flex-direction: column;
}

li {
    list-style-type: none;
    padding: 10px 0;  
}

.color {
    height: 40px;
    width: 40px;
    border-radius: 20px;
}

#color-red {
    background-color: red;
}

#color-blue {
    background-color: blue;
}

#color-green {
    background-color: green;
}

#color-yellow {
    background-color: yellow;
}

#color-white {
    background-color: white;
}

#color-black {
    background-color: black;
}

.size {
    height: 40px;
    width: 40px;
    border-radius: 20px;
}

p {
    font-family:Arial, Helvetica, sans-serif;
    font-size: 13px;
}

